// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drivers http should add context on http response 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": Object {
          "context": 1,
          "other": "context",
        },
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
            "method": "GET",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": Object {
          "context": 1,
          "other": "context",
        },
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "options": Object {
            "headers": Object {},
            "method": "GET",
          },
          "url": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>GET>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
        "method": "GET",
      },
    ],
  ],
}
`;

exports[`drivers http should fetch data an trigger common events 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "json": [Function],
        },
        "status": undefined,
        "type": "@@http/GOOGLE>GET>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
      },
    ],
  ],
}
`;

exports[`drivers http should fetch data and calls json() 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "result": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>GET>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
      },
    ],
  ],
}
`;

exports[`drivers http should fetch data and dispatch a FAILED 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "status": 404,
          "url": "http://google.fr",
        },
        "status": 404,
        "type": "@@http/GOOGLE>GET>FAILED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
      },
    ],
  ],
}
`;

exports[`drivers http should not stringify data when data is formData 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "body": FormData {},
            "headers": Object {},
            "method": "POST",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>POST>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "options": Object {
            "body": FormData {},
            "headers": Object {},
            "method": "POST",
          },
          "url": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>POST>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "body": FormData {},
        "headers": Object {},
        "method": "POST",
      },
    ],
  ],
  "fetchBodyForm": Map {
    "some" => "data",
  },
}
`;

exports[`drivers http should safely fail to parse json 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": [Error: oups-json-http://google.fr],
        "status": undefined,
        "type": "@@http/GOOGLE>GET>FAILED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
      },
    ],
  ],
}
`;

exports[`drivers http should safely fail to request 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
          },
        ],
        "headers": undefined,
        "payload": [Error: oups-http://google.fr],
        "status": undefined,
        "type": "@@http/GOOGLE>GET>FAILED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
      },
    ],
  ],
}
`;

exports[`drivers http should set and clear Authorization 1`] = `
Object {
  "clearedAuth": Array [
    "http://google_2.fr",
    Object {
      "headers": Object {},
    },
  ],
  "fetchCounts": 5,
  "noOption": Array [
    "http://google_0.fr",
    Object {
      "headers": Object {},
    },
  ],
  "overridedAuth": Array [
    "http://google_1.fr",
    Object {
      "headers": Object {
        "Authorization": "auth",
      },
    },
  ],
  "setAuthorization": Array [
    "http://google_3.fr",
    Object {
      "headers": Object {
        "Authorization": "auth",
      },
    },
  ],
  "setAuthorizationToUndefined": Array [
    "http://google_4.fr",
    Object {
      "headers": Object {},
    },
  ],
}
`;

exports[`drivers http should set customs options 1`] = `
Object {
  "fetchCounts": 2,
  "globalOptions": Array [
    "http://google.fr",
    Object {
      "credentials": "include",
      "headers": Object {
        "Authorization": "Bearer <my-token>",
        "other": "header",
      },
      "other": "option",
    },
  ],
  "overridedOptions": Array [
    "http://google_2.fr",
    Object {
      "credentials": "new credentials",
      "headers": Object {
        "Authorization": "new auth",
        "other": "header",
        "yep": "new one header",
      },
      "other": "option",
      "yep": "new one option",
    },
  ],
}
`;

exports[`drivers http should stringify data but not override content-type 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "body": "{\\"some\\":\\"data\\"}",
            "headers": Object {
              "Content-Type": "my-contentType",
            },
            "method": "POST",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>POST>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "options": Object {
            "body": "{\\"some\\":\\"data\\"}",
            "headers": Object {
              "Content-Type": "my-contentType",
            },
            "method": "POST",
          },
          "url": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>POST>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "body": "{\\"some\\":\\"data\\"}",
        "headers": Object {
          "Content-Type": "my-contentType",
        },
        "method": "POST",
      },
    ],
  ],
}
`;

exports[`drivers http should stringify data with method helper 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "body": "{\\"some\\":\\"data\\"}",
            "headers": Object {
              "Content-Type": "application/json",
            },
            "method": "POST",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>POST>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "options": Object {
            "body": "{\\"some\\":\\"data\\"}",
            "headers": Object {
              "Content-Type": "application/json",
            },
            "method": "POST",
          },
          "url": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>POST>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "body": "{\\"some\\":\\"data\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
  ],
}
`;

exports[`drivers http should works with method helper (OPTIONS) 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
            "method": "OPTIONS",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>OPTIONS>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": undefined,
        "fetch": undefined,
        "headers": undefined,
        "payload": Object {
          "options": Object {
            "headers": Object {},
            "method": "OPTIONS",
          },
          "url": "http://google.fr",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>OPTIONS>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
        "method": "OPTIONS",
      },
    ],
  ],
}
`;

exports[`drivers should add headers on http response 1`] = `
Object {
  "dispatch": Array [
    Array [
      Object {
        "type": "@@krml/INIT",
      },
    ],
    Array [
      Object {
        "context": Object {
          "context": 1,
          "other": "context",
        },
        "fetch": Array [
          "http://google.fr",
          Object {
            "headers": Object {},
            "method": "GET",
          },
        ],
        "headers": undefined,
        "payload": undefined,
        "status": undefined,
        "type": "@@http/GOOGLE>GET>STARTED",
      },
    ],
    Array [
      Object {
        "type": "DISPATCHED",
      },
    ],
    Array [
      Object {
        "context": Object {
          "context": 1,
          "other": "context",
        },
        "fetch": undefined,
        "headers": Object {
          "Content-Length": "10",
          "Content-Type": "application/json",
        },
        "payload": Object {
          "actual": "data",
        },
        "status": undefined,
        "type": "@@http/GOOGLE>GET>ENDED",
      },
    ],
  ],
  "fetch": Array [
    Array [
      "http://google.fr",
      Object {
        "headers": Object {},
        "method": "GET",
      },
    ],
  ],
}
`;
